--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,8 +8,8 @@ http {
     limit_req_zone $binary_remote_addr zone=user_tile_rate_limit:10m rate=10r/s;
     limit_req_zone $binary_remote_addr zone=user_other_rate_limit:10m rate=20r/s;
 
-    upstream postserve {
-        server postserve:8090 max_conns=128;
+    upstream postile {
+        server postile max_conns=128;
     }
 
     upstream tileserver-gl {
@@ -48,14 +48,17 @@ http {
             limit_req zone=user_tile_rate_limit burst=30 nodelay;
         }
 
+        location ~ /tilejson/v3.json {
+            root /tilejson/;
+        }
+
         # Vector tile, tilejson
-        rewrite ^/data/v3/([0-9]+/[0-9]+/[0-9]+\.pbf)$ /data/v3/tiles/$1 last;
-        location ~ /data/v3/(?<postserve_path>.*)$ {
-            proxy_pass http://postserve/$postserve_path;
+        location ~ /data/v3/(?<postile_path>[0-9]+/[0-9]+/[0-9]+\.pbf)$ {
+            proxy_pass http://postile/$postile_path;
             proxy_cache cache;
             proxy_cache_valid 200 204 30d;
             proxy_set_header Host $http_host;
-            proxy_cache_key v3/$postserve_path;
+            proxy_cache_key v3/$postile_path;
             proxy_cache_use_stale error timeout invalid_header updating http_500 http_502 http_503 http_504;
             proxy_buffering on;
             proxy_cache_lock on;
