Expire other tiles than zoom 14

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -8,9 +8,11 @@ RUN apk update && \
         bash \
         curl \
         inotify-tools \
-        jq
+        jq \
+        python
 
 COPY run.sh /
 COPY expire.sh /
+COPY tile_multiplier.py /
 
 CMD ["/run.sh"]
