--- a/nginx/nginx.template.conf
+++ b/nginx/nginx.template.conf
@@ -23,60 +23,71 @@ http {
         # Raster tile >= z15, no expiration from OSM update
         location ~ /styles/(?<tile_path>.*/[0-9]+/[0-9]+/(1[5-9]|2[0-9])\.(png|jpeg|webp))$ {
             proxy_pass http://tileserver-gl;
-            proxy_cache cache;
-            proxy_cache_valid 200 12h;
             proxy_set_header Host $http_host;
-            proxy_cache_key $tile_path;
-            proxy_cache_use_stale error timeout invalid_header updating http_500 http_502 http_503 http_504;
             proxy_buffering on;
-            proxy_cache_lock on;
 
             limit_req zone=user_tile_rate_limit burst=15 nodelay;
+
+            {% if env['NGINX_DISABLE_CACHE'] %}
+            proxy_cache cache;
+            proxy_cache_valid 200 12h;
+            proxy_cache_key $tile_path;
+            proxy_cache_use_stale error timeout invalid_header updating http_500 http_502 http_503 http_504;
+            proxy_cache_lock on;
+            {% endif %}
         }
 
         # Raster tile <= 14
         location ~ /styles/(?<tile_path>.*/[0-9]+/[0-9]+/[0-9]+\.(png|jpeg|webp))$ {
             proxy_pass http://tileserver-gl;
-            proxy_cache cache;
-            proxy_cache_valid 200 30d;
             proxy_set_header Host $http_host;
-            proxy_cache_key $tile_path;
-            proxy_cache_use_stale error timeout invalid_header updating http_500 http_502 http_503 http_504;
             proxy_buffering on;
-            proxy_cache_lock on;
 
             limit_req zone=user_tile_rate_limit burst=30 nodelay;
+            {% if not env.get('NGINX_DISABLE_CACHE') %}
+            proxy_cache cache;
+            proxy_cache_valid 200 30d;
+            proxy_cache_key $tile_path;
+            proxy_cache_use_stale error timeout invalid_header updating http_500 http_502 http_503 http_504;
+            proxy_cache_lock on;
+            {% endif %}
         }
 
         # Vector tile, tilejson
         rewrite ^/data/v3/([0-9]+/[0-9]+/[0-9]+\.pbf)$ /data/v3/tiles/$1 last;
         location ~ /data/v3/(?<postserve_path>.*)$ {
             proxy_pass http://postserve/$postserve_path;
-            proxy_cache cache;
-            proxy_cache_valid 200 204 30d;
             proxy_set_header Host $http_host;
-            proxy_cache_key v3/$postserve_path;
-            proxy_cache_use_stale error timeout invalid_header updating http_500 http_502 http_503 http_504;
             proxy_buffering on;
-            proxy_cache_lock on;
 
             limit_req zone=user_tile_rate_limit burst=30 nodelay;
+
+            {% if not env.get('NGINX_DISABLE_CACHE') %}
+            proxy_cache cache;
+            proxy_cache_valid 200 204 30d;
+            proxy_cache_key v3/$postserve_path;
+            proxy_cache_use_stale error timeout invalid_header updating http_500 http_502 http_503 http_504;
+            proxy_cache_lock on;
+            {% endif %}
         }
 
         # Other static and database less resources
         # HTML, CSS, JS, style, font, sprites
         location / {
             proxy_pass http://tileserver-gl;
-            # proxy_cache cache;
-            # proxy_cache_valid 200 30d;
             proxy_set_header Host $http_host;
-            # proxy_cache_key $request_uri;
-            # proxy_cache_use_stale error timeout invalid_header updating http_500 http_502 http_503 http_504;
             proxy_buffering on;
-            # proxy_cache_lock on;
-            # proxy_cache_purge EXPIRE from 127.0.0.1; # From ngx_cache_purge module
 
             limit_req zone=user_other_rate_limit burst=30 nodelay;
+
+            # {% if not env.get('NGINX_DISABLE_CACHE') %}
+            # proxy_cache cache;
+            # proxy_cache_valid 200 30d;
+            # proxy_cache_key $request_uri;
+            # proxy_cache_use_stale error timeout invalid_header updating http_500 http_502 http_503 http_504;
+            # proxy_cache_lock on;
+            # proxy_cache_purge EXPIRE from 127.0.0.1; # From ngx_cache_purge module
+            # {% endif %}
         }
     }
 
@@ -86,11 +97,14 @@ http {
 
         # Vector tile and raster <= 14
         location ~ (?<tile_path>.*/[0-9]+/[0-9]+/[0-9]+\.(pbf|png|jpeg|webp))$ {
+            proxy_buffering on;
+
+            {% if not env.get('NGINX_DISABLE_CACHE') %}
             proxy_cache cache;
             proxy_cache_key $tile_path;
-            proxy_buffering on;
             proxy_cache_lock on;
             proxy_cache_purge EXPIRE from 127.0.0.1; # From ngx_cache_purge module
+            {% endif %}
         }
     }
 }
