Expose NGINX status #32

--- a/nginx/nginx.template.conf
+++ b/nginx/nginx.template.conf
@@ -107,4 +107,14 @@ http {
             {% endif %}
         }
     }
+
+    server {
+        listen 0.0.0.0:82;
+        server_name nginx_status;
+        location /nginx_status {
+            stub_status on;
+            access_log off;
+            allow all;
+        }
+    }
 }
