Enable cache for static contain #33

--- a/nginx/nginx.template.conf
+++ b/nginx/nginx.template.conf
@@ -64,7 +64,7 @@ http {
 
             {% if not env.get('NGINX_DISABLE_CACHE') %}
             proxy_cache cache;
-            proxy_cache_valid 200 204 30d;
+            proxy_cache_valid 200 204 1d;
             proxy_cache_key v3/$postserve_path;
             proxy_cache_use_stale error timeout invalid_header updating http_500 http_502 http_503 http_504;
             proxy_cache_lock on;
@@ -80,14 +80,13 @@ http {
 
             limit_req zone=user_other_rate_limit burst=30 nodelay;
 
-            # {% if not env.get('NGINX_DISABLE_CACHE') %}
-            # proxy_cache cache;
-            # proxy_cache_valid 200 30d;
-            # proxy_cache_key $request_uri;
-            # proxy_cache_use_stale error timeout invalid_header updating http_500 http_502 http_503 http_504;
-            # proxy_cache_lock on;
-            # proxy_cache_purge EXPIRE from 127.0.0.1; # From ngx_cache_purge module
-            # {% endif %}
+            {% if not env.get('NGINX_DISABLE_CACHE') %}
+            proxy_cache cache;
+            proxy_cache_valid 200 204 30d;
+            proxy_cache_key $request_uri;
+            proxy_cache_use_stale error timeout invalid_header updating http_500 http_502 http_503 http_504;
+            proxy_cache_lock on;
+            {% endif %}
         }
     }
 
