--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - ./tileserver-gl/static/public/index.html:/usr/src/app/public/templates/index.tmpl
       - ./tileserver-gl/static/public:/usr/src/app/public/resources
     networks:
-      - openmaptiles_conn
+      - openmaptiles-conn
 
   nginx:
     build:
@@ -23,14 +23,14 @@ services:
       - nginx-cache:/cache
       - ./openmaptiles/data/expire_tiles:/data/expire_tiles
     networks:
-      - openmaptiles_conn
+      - openmaptiles-conn
     ports:
       - "${NGINX_PORT:-8080}:80"
       - "127.0.0.1:8082:82"
 
 networks:
-  openmaptiles_conn:
-    name: openmaptiles_postgres_conn
+  openmaptiles-conn:
+    name: openmaptiles-postgres-conn
     driver: bridge
 
 volumes:
