--- a/nginx/nginx.template.conf
+++ b/nginx/nginx.template.conf
@@ -29,6 +29,9 @@ http {
             limit_req zone=user_tile_rate_limit burst=15 nodelay;
 
             {% if env['NGINX_DISABLE_CACHE'] %}
+            expires 1d;
+            add_header Cache-Control "public";
+
             proxy_cache cache;
             proxy_cache_valid 200 12h;
             proxy_cache_key $tile_path;
@@ -44,7 +47,11 @@ http {
             proxy_buffering on;
 
             limit_req zone=user_tile_rate_limit burst=30 nodelay;
+
             {% if not env.get('NGINX_DISABLE_CACHE') %}
+            expires 7d;
+            add_header Cache-Control "public";
+
             proxy_cache cache;
             proxy_cache_valid 200 30d;
             proxy_cache_key $tile_path;
@@ -63,6 +70,9 @@ http {
             limit_req zone=user_tile_rate_limit burst=30 nodelay;
 
             {% if not env.get('NGINX_DISABLE_CACHE') %}
+            expires 1d;
+            add_header Cache-Control "public";
+
             proxy_cache cache;
             proxy_cache_valid 200 204 1d;
             proxy_cache_key v3/$postserve_path;
@@ -81,6 +91,9 @@ http {
             limit_req zone=user_other_rate_limit burst=30 nodelay;
 
             {% if not env.get('NGINX_DISABLE_CACHE') %}
+            expires 1d;
+            add_header Cache-Control "public";
+
             proxy_cache cache;
             proxy_cache_valid 200 204 30d;
             proxy_cache_key $request_uri;
