--- a/nginx/nginx.template.conf
+++ b/nginx/nginx.template.conf
@@ -3,7 +3,7 @@ events {
 }
 
 http {
-    proxy_cache_path /cache levels=1:2 keys_zone=cache:10m inactive=30d max_size=1m;
+    proxy_cache_path /cache levels=1:2 keys_zone=cache:{{ env['CACHE_KEYS_ZONE_SIZE'] }} inactive=30d max_size={{ env['CACHE_MAX_SIZE'] }};
 
     limit_req_zone $binary_remote_addr zone=user_tile_rate_limit:10m rate=10r/s;
     limit_req_zone $binary_remote_addr zone=user_other_rate_limit:10m rate=20r/s;
