Allows url param key to higger download rate

--- a/nginx/nginx.template.conf
+++ b/nginx/nginx.template.conf
@@ -5,7 +5,8 @@ events {
 http {
     proxy_cache_path /cache levels=1:2 keys_zone=cache:{{ env['CACHE_KEYS_ZONE_SIZE'] }} inactive=30d max_size={{ env['CACHE_MAX_SIZE'] }};
 
-    limit_req_zone $binary_remote_addr zone=user_tile_rate_limit:10m rate=10r/s;
+    limit_req_zone $key_api$white_referer zone=user_tile_rate_limit:10m rate=10r/s;
+    limit_req_zone $binary_remote_addr zone=download_tile_rate_limit:10m rate=30r/s;
     limit_req_zone $binary_remote_addr zone=user_other_rate_limit:10m rate=20r/s;
 
     upstream postserve {
@@ -14,6 +15,17 @@ http {
 
     upstream tileserver-gl {
         server tileserver-gl;
+    }
+
+    map $arg_key $key_api {
+        default $binary_remote_addr;
+        include "maps/key_no_rate_limit.conf";
+    }
+
+    map $http_referer $white_referer {
+        hostnames;
+        default $binary_remote_addr;
+        include "maps/hostnames_no_rate_limit.conf";
     }
 
     server {
@@ -26,7 +38,8 @@ http {
             proxy_set_header Host $http_host;
             proxy_buffering on;
 
-            limit_req zone=user_tile_rate_limit burst=15 nodelay;
+            limit_req zone=user_tile_rate_limit burst=15;
+            limit_req zone=download_tile_rate_limit burst=15;
 
             {% if env['NGINX_DISABLE_CACHE'] %}
             expires 1d;
@@ -46,7 +59,8 @@ http {
             proxy_set_header Host $http_host;
             proxy_buffering on;
 
-            limit_req zone=user_tile_rate_limit burst=30 nodelay;
+            limit_req zone=user_tile_rate_limit burst=30;
+            limit_req zone=download_tile_rate_limit burst=30;
 
             {% if not env.get('NGINX_DISABLE_CACHE') %}
             expires 7d;
@@ -67,7 +81,8 @@ http {
             proxy_set_header Host $http_host;
             proxy_buffering on;
 
-            limit_req zone=user_tile_rate_limit burst=30 nodelay;
+            limit_req zone=user_tile_rate_limit burst=30;
+            limit_req zone=download_tile_rate_limit burst=30;
 
             {% if not env.get('NGINX_DISABLE_CACHE') %}
             expires 1d;
