Fix nginx limit_req

--- a/nginx/nginx.template.conf
+++ b/nginx/nginx.template.conf
@@ -5,9 +5,9 @@ events {
 http {
     proxy_cache_path /cache levels=1:2 keys_zone=cache:{{ env['CACHE_KEYS_ZONE_SIZE'] }} inactive=30d max_size={{ env['CACHE_MAX_SIZE'] }};
 
-    limit_req_zone $key_api$white_referer zone=user_tile_rate_limit:10m rate=10r/s;
+    limit_req_zone $white_referer_key_api zone=user_tile_rate_limit:10m rate=10r/s;
     limit_req_zone $binary_remote_addr zone=download_tile_rate_limit:10m rate=30r/s;
-    limit_req_zone $binary_remote_addr zone=user_other_rate_limit:10m rate=20r/s;
+    limit_req_zone $white_referer_key_api zone=user_other_rate_limit:10m rate=30r/s;
 
     upstream postserve {
         server postserve:8090 max_conns=128;
@@ -22,9 +22,9 @@ http {
         include "maps/key_no_rate_limit.conf";
     }
 
-    map $http_referer $white_referer {
+    map $http_referer $white_referer_key_api {
         hostnames;
-        default $binary_remote_addr;
+        default $key_api;
         include "maps/hostnames_no_rate_limit.conf";
     }
 
