--- a/tileserver-gl/static/package.json
+++ b/tileserver-gl/static/package.json
@@ -5,19 +5,19 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --config webpack.config.js --mode production",
-    "serve": "webpack --config webpack.config.js --mode development"
+    "serve": "webpack serve --config webpack.config.js --mode development"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "css-loader": "^3.6.0",
-    "webpack": "^5.40.0",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
+    "css-loader": "^6.6.0",
+    "webpack": "^5.68.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
-    "maplibre-gl": "^1.13.0",
-    "style-loader": "^1.2.1"
+    "maplibre-gl": "^2.1.6",
+    "style-loader": "^3.3.1"
   }
 }
