Review nginx expiration process after using new ngx_http_cache_purge_module #60

--- a/nginx/nginx.template.conf
+++ b/nginx/nginx.template.conf
@@ -78,8 +78,8 @@ http {
 
         # Vector tile, tilejson
         rewrite ^/data/v3/([0-9]+/[0-9]+/[0-9]+\.pbf)$ /data/v3/tiles/$1 last;
-        location ~ /data/v3/(?<postserve_path>.*)$ {
-            proxy_pass http://postserve/$postserve_path;
+        location ~ /data/v3/tiles/(?<postserve_path>.*)$ {
+            proxy_pass http://postserve/tiles/$postserve_path;
             proxy_set_header Host $http_host;
             proxy_buffering on;
 
@@ -125,7 +125,8 @@ http {
         server_name nginx_internal;
 
         # Vector tile and raster <= 14
-        location ~ (?<tile_path>.*/[0-9]+/[0-9]+/[0-9]+\.(pbf|png|jpeg|webp))$ {
+        location ~ /(?<tile_path>.*/[0-9]+/[0-9]+/[0-9]+\.(pbf|png|jpeg|webp))$ {
+            proxy_pass http://postserve/$tile_path; # Not used but required to enable proxy_cache_purge
             proxy_buffering on;
 
             {% if not env.get('NGINX_DISABLE_CACHE') %}
